backend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
        tier: backend
    spec:
      containers:
        - name: k8s-backend
          image: atiakhairunican/jenkinsback:main
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
    tier: backend
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9000
      nodePort: 31284
      protocol: TCP
      name: backendport
