frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontendspace

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontendspace
spec:
  selector:
    matchLabels:
      app: frontendapp
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontendapp
        tier: frontend
    spec:
      containers:
        - name: k8s-frontend
          image: atiakhairunican/jenkinsfront:main
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontendspace
spec:
  selector:
    app: frontendapp
    tier: frontend
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8080
      nodePort: 31285
      protocol: TCP
      name: frontendport
