postgres.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgresapp
  replicas: 1
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: k8s-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgresapp
  type: NodePort
  ports:
    - port: 5151
      targetPort: 5432
      nodePort: 31282
      protocol: TCP
      name: postgresport
