roll.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appbackend
  template:
    metadata:
      labels:
        app: appbackend
    spec:
      containers:
      - name: k8s-postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
      - name: k8s-redis
        image: redis:latest
        ports:
        - containerPort: 6379
      - name: k8s-backend
        image: atiakhairunican/jenkinsback:main
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: appbackend
  type: NodePort
  ports:
    - port: 5151
      targetPort: 5432
      nodePort: 31282
      protocol: TCP
      name: postgresservice
    - port: 6161
      targetPort: 6379
      nodePort: 31283
      protocol: TCP
      name: redisservice
    - port: 9191
      targetPort: 9000
      nodePort: 31284
      protocol: TCP
      name: backendservice
